--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -34,9 +34,12 @@
   "add": {
     "message": "Adicionar"
   },
-  "add_@_0__as_exception": {
+  "add_@_0__as_an_exception": {
     "message": "Adicionar $${0} como exceção",
-    "description": "Add domain as exception"
+    "description": "Add domain as an exception"
+  },
+  "add_exception": {
+    "message": "Adicionar exceção"
   },
   "add_website": {
     "message": "Adicionar site"
@@ -96,6 +99,9 @@
   },
   "block_all__recommended_": {
     "message": "Bloquear tudo (recomendado)"
+  },
+  "block_on_all_websites": {
+    "message": "Bloquear em todos os sites"
   },
   "block_on_this_website": {
     "message": "Bloquear neste site"
@@ -246,9 +252,6 @@
   "extensions": {
     "message": "Extensões",
     "description": "Tracker category name"
-  },
-  "for_all_websites": {
-    "message": "Em todos os sites"
   },
   "for_more_information_read_our_full": {
     "message": "Para mais informações, leia a nossa versão completa"
@@ -594,6 +597,9 @@
   },
   "trust_all__recommended_": {
     "message": "Confiar em todos (recomendado)"
+  },
+  "trust_on_all_websites": {
+    "message": "Confiança em todos os sites"
   },
   "trust_on_this_website": {
     "message": "Confiar nesse site"
