--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -34,9 +34,12 @@
   "add": {
     "message": "Добавить"
   },
-  "add_@_0__as_exception": {
-    "message": "Добавить $${0} в качестве исключения",
-    "description": "Add domain as exception"
+  "add_@_0__as_an_exception": {
+    "message": "Добавить $${0} в исключения",
+    "description": "Add domain as an exception"
+  },
+  "add_exception": {
+    "message": "Добавить исключение"
   },
   "add_website": {
     "message": "Добавить сайт"
@@ -96,6 +99,9 @@
   },
   "block_all__recommended_": {
     "message": "Заблокировать все (рекомендуется)"
+  },
+  "block_on_all_websites": {
+    "message": "Блокировать на всех сайтах"
   },
   "block_on_this_website": {
     "message": "Заблокировать на этом сайте"
@@ -246,9 +252,6 @@
   "extensions": {
     "message": "Расширения",
     "description": "Tracker category name"
-  },
-  "for_all_websites": {
-    "message": "Для всех сайтов"
   },
   "for_more_information_read_our_full": {
     "message": "Для получения дополнительной информации прочтите"
@@ -594,6 +597,9 @@
   },
   "trust_all__recommended_": {
     "message": "Доверяйте всем (рекомендуется)"
+  },
+  "trust_on_all_websites": {
+    "message": "Доверие на всех сайтах"
   },
   "trust_on_this_website": {
     "message": "Разрешить на этом сайте"
