--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -34,9 +34,12 @@
   "add": {
     "message": "新增"
   },
-  "add_@_0__as_exception": {
+  "add_@_0__as_an_exception": {
     "message": "新增 $${0} 為例外",
-    "description": "Add domain as exception"
+    "description": "Add domain as an exception"
+  },
+  "add_exception": {
+    "message": "新增例外"
   },
   "add_website": {
     "message": "新增網站"
@@ -96,6 +99,9 @@
   },
   "block_all__recommended_": {
     "message": "阻止所有（推薦）"
+  },
+  "block_on_all_websites": {
+    "message": "封鎖全部網站"
   },
   "block_on_this_website": {
     "message": "在此網站封鎖"
@@ -246,9 +252,6 @@
   "extensions": {
     "message": "擴展",
     "description": "Tracker category name"
-  },
-  "for_all_websites": {
-    "message": "對所有網站"
   },
   "for_more_information_read_our_full": {
     "message": "如欲了解更多訊息，請閱讀我們的全文"
@@ -594,6 +597,9 @@
   },
   "trust_all__recommended_": {
     "message": "信任一切（推薦)"
+  },
+  "trust_on_all_websites": {
+    "message": "信任所有網站"
   },
   "trust_on_this_website": {
     "message": "信任此網站"
