Fix short description translation

--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
   },
   "manifest_short_description": {
-    "message": "Ghostery ist eine leistungsstarke Datenschutz-Erweiterung. Damit können Sie Werbung blockieren, Tracker stoppen und Websites beschleunigen."
+    "message": "Die leistungsstarke Datenschutz-Erweiterung - blockiert Werbung, stoppt Tracker und beschleunigt Webseiten"
   },
   "menu": {
     "message": "Menü"
