--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Tracker & Ad Blocker - Privacy AdBlock"
   },
   "manifest_short_description": {
-    "message": "Ghostery is a powerful privacy extension. Block ads, stop trackers and speed up websites."
+    "message": "A powerful privacy extension that blocks ads, prevents trackers, and accelerates website loading"
   },
   "menu": {
     "message": "Menu"
