--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
   },
   "manifest_short_description": {
-    "message": "Ghostery es una potente extensión para tu privacidad. Bloquea anuncios, detiene rastreadores y acelera sitios web."
+    "message": "Una poderosa extensión de privacidad que bloquea anuncios, previene rastreadores y acelera la carga de sitios web"
   },
   "menu": {
     "message": "Menú"
