--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Bloqueur de Traqueurs et de Publicités - confidentialité"
   },
   "manifest_short_description": {
-    "message": "Ghostery est une puissante extension de protection de la vie privée. Bloquez les publicités, déjouez les outils de pistage et accélérez les sites Web."
+    "message": "Une puissante extension de confidentialité qui bloque les publicités, empêche les trackers et accélère le chargement des sites web"
   },
   "menu": {
     "message": "Menu"
