--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Blocco Annunci e Tracker - Privacy AdBlock"
   },
   "manifest_short_description": {
-    "message": "Ghostery è una potente estensione per la protezione della privacy. Blocca pubblicità e tracker, e accelera i siti web."
+    "message": "Una potente estensione per la privacy che blocca gli annunci, previene i Tracker e accelera il caricamento dei siti web"
   },
   "menu": {
     "message": "Menu"
