--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery 트래커 & 광고 차단기 - 개인정보 보호 광고 차단기"
   },
   "manifest_short_description": {
-    "message": "Ghostery는 강력한 개인정보 보호 확장 프로그램입니다. 광고를 차단, 추적을 중단하고 웹 사이트 속도를 빠르게 합니다."
+    "message": "강력한 개인정보 보호 확장 프로그램으로 광고를 차단하고, 추적기를 방지하며, 웹사이트 로딩 속도를 가속화합니다"
   },
   "menu": {
     "message": "메뉴"
