--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Bloker Trackerów i Reklam - Prywatność AdBlock"
   },
   "manifest_short_description": {
-    "message": "Ghostery to potężne rozszerzenie do ochrony prywatności. Blokuje reklamy, zatrzymuje trackery i przyspiesza działanie stron internetowych."
+    "message": "Potężne rozszerzenie chroniące prywatność, które blokuje reklamy, zapobiega trackerom i przyspiesza ładowanie stron internetowych"
   },
   "menu": {
     "message": "Menu"
