--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
   },
   "manifest_short_description": {
-    "message": "O Ghostery é uma poderosa extensão de privacidade. Bloqueie anúncios, interrompa rastreadores e acelere sites."
+    "message": "Uma poderosa extensão de privacidade que bloqueia anúncios, impede rastreadores e acelera o carregamento de sites"
   },
   "menu": {
     "message": "Menu"
