--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery Трекер & Ad Blocker - приватный блокировщик рекламы"
   },
   "manifest_short_description": {
-    "message": "Ghostery - это мощное расширение для обеспечения конфиденциальности. Блокируйте рекламу, отключайте средства слежения и ускоряйте загрузку веб-сайтов."
+    "message": "Мощное расширение для защиты конфиденциальности, которое блокирует рекламу, предотвращает трекеры и ускоряет загрузку веб-сайтов"
   },
   "menu": {
     "message": "Меню"
