--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghosteryトラッカー＆広告ブロック - プライバシー広告ブロック"
   },
   "manifest_short_description": {
-    "message": "Ghosteryは強力なプライバシー拡張機能です。広告をブロックし、トラッカーを阻止し、ウェブサイトを高速化します。"
+    "message": "強力なプライバシー拡張機能で、広告をブロックし、トラッカーを防ぎ、ウェブサイトの読み込みを高速化します。"
   },
   "menu": {
     "message": "メニュー"
