--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery 跟踪器和广告拦截器 - 隐私广告拦截器"
   },
   "manifest_short_description": {
-    "message": "Ghostery 是强大的隐私保护扩展程序。拦截广告，停止跟踪器，提高网站速度。"
+    "message": "一个强大的隐私扩展，能够屏蔽广告、防止追踪器并加速网站加载"
   },
   "menu": {
     "message": "菜单"
