--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -369,7 +369,7 @@
     "message": "Ghostery 追蹤器和廣告攔截器 - 隱私 AdBlock"
   },
   "manifest_short_description": {
-    "message": "Ghostery是一個強效的隱私擴增功能。攔截廣告、制止追蹤器及加快網頁運行。"
+    "message": "強大的隱私擴充功能，能阻擋廣告、防止追蹤器並加速網站載入"
   },
   "menu": {
     "message": "選單"
